    * 0904 FIX: Fixed exception in host parameter overview...
    * 0971 FIX: Fix missing authentication of PHP addons in D-WATO when activation mode is reload...
    * 0972 FIX: Do not loose site specific global settings anymore when chaning a site's configuration...
    * 0933 FIX: WATO snapshots: excluded some superfluous files from nagvis backup domaim...
    * 0937 FIX: Fixed exception with table search functionality...

    Notifications:
    * 0754 Allow users to disable their notifications completely...
    * 0755 Added variables LASTHOSTUP_REL and LASTSERVICEOK_REL to notification context...
    * 0883 Added Date / Time to HTML notification email
    * 0900 notify_multitech.py: new treasures script for notifying via MultiTech SMS Gateway...
    * 0968 Notification scripts are now configurable via WATO...
    * 0974 New notification plugin for ASCII emails...
    * 0752 FIX: FIX: compute correct state transitions for notifications...
    * 0753 FIX: FIX: correctly show original state in HTML notification mails...
    * 0609 FIX: mail notification script now uses 6 digit hex codes for colors to be better compatible with web based mail browsers
    * 0964 FIX: Fix hanging shutdown of CMC on RedHat 5.X...
    * 0918 FIX: notification: fixed exception when sending notifications as sms / ascii mail...

    Reporting & Availability:
    * 0756 Allow availability of multisite BI aggregates at once...
    * 0966 CSV export for availability works now also for BI aggregates
    * 0967 BI Availability timewarp: new buttons for moving back and forth
    * 0962 FIX: Fix CSV-Export in availability table
    * 0890 FIX: Fix availability computation for hosts...
    * 0891 FIX: Fix HTML encoding of tootip in inline timeline of availability

    Event Console:
    * 0885 New option for writing all messages into a syslog-like logfile...
    * 0902 FIX: event console view: fixed exception on rendering host tags for unknown hosts...

    Livestatus: